3.15-at.5
=========
fixes:
 - fix install on very old swupdate where swupdate -g might not include /dev
 - fix podman_cleanup corner cases with infra image
 - fix sha256sum file not being updated properly sometimes (if zst archive
   changed without changing base file)

3.15-at.4
=========
breaking change:
 - component, version and install_if variables are reset before parsing each
desc file. component is set to desc file name, the other two are emptied.

features:
 - allow setting ZSTD_CLEVEL to change compression level
 - log update contents to at-log and store last update partition to
/var/log/swupdate/last_update
 - add update_preserve_files.sh helper script to manage this file
 - allow trailing arguments for swdesc_script
 - set FW_UPDATE_IND after install unless no reboot is needed
 - add --extra-os swdesc_* switch that adds extra_os. to component
 - hawkbit-compose japanese translation

fixes:
 - PRIVKEY_PASS wasn't escaped properly
 - fix hawkbit service restart for POST=container updates with hawkbit

3.15-at.3
=========
breaking changes:
 - rename hawkbit/create-updates.sh to hawkbit_push_update and install it
to bin dir

features:
 - add NO_PRESERVE_FILES option to skip handling copyback when using custom
rootfs
 - full rework of hawkbit container: use hawkbit-compose/setup_container.sh
to generate appropriate docker-compose.yml and config files

fixes:
 - fix sw-versions handling for board-specific updates (e.g. boot image) that
might generate multiple lines. This was harmless. Such duplicate lines will
also now be removed.
 - improve various error messages
 - do not try to wait for podman containers to stop if none were running
 - install base_os first if present in the image. This allows running
swdesc_exec or similar even if a base_os update is coming that would
previously fail because /target is empty

3.15-at.2
=========
breaking changes:
 - desc files: disallow using the same component with multiple versions