@@ -1022,6 +1022,12 @@ EOF
 	[ -n "$FORCE_VERSION" ] && echo "  #FORCE_VERSION"
 	[ -n "$CONTAINER_CLEAR" ] && echo "  #CONTAINER_CLEAR"
 	[ -n "$NO_PRESERVE_FILES" ] && echo "  #NO_PRESERVE_FILES"
+	[ -n "$NOTIFY_STARTING_CMD" ] \
+		&& echo "$NOTIFY_STARTING_CMD" | sed -e 's/^/  #NOTIFY_STARTING_CMD /'
+	[ -n "$NOTIFY_FAIL_CMD" ] \
+		&& echo "$NOTIFY_FAIL_CMD" | sed -e 's/^/  #NOTIFY_FAIL_CMD /'
+	[ -n "$NOTIFY_SUCCESS_CMD" ] \
+		&& echo "$NOTIFY_SUCCESS_CMD" | sed -e 's/^/  #NOTIFY_SUCCESS_CMD /'
 	case "$POST_ACTION" in
 	poweroff) echo " #POSTACT_POWEROFF";;
 	wait) echo " #POSTACT_WAIT";;
